--- a/mysql-server.cnf
+++ b/mysql-server.cnf
@@ -48,6 +48,11 @@ slow-query-log                 = 1
 slow-query-log-file            = /var/lib/mysql/mysql-slow.log
 
 
+[mariadb]
+innodb_buffer_pool_size=2147483648
+tmp_table_size=64M
+max_heap_table_size=64M
+max_connections=50
 
 
 
